--- a/index.html
+++ b/index.html
@@ -3,113 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saha Şefi V29 - Hızlı Kayıt</title>
+    <title>Saha Şefi V19 - Süper Tolerans</title>
     <style>
-        :root { --bg: #0b0e14; --panel: #161b22; --border: #30363d; --text: #e6edf3; --accent: #238636; }
-        body { background: var(--bg); color: var(--text); font-family: sans-serif; text-align: center; padding: 10px; margin: 0; }
-        .wrapper { max-width: 600px; margin: 10px auto; background: var(--panel); padding: 25px; border-radius: 25px; border: 2px solid var(--border); }
-        #text-query { width: 90%; padding: 15px; border-radius: 12px; border: 2px solid var(--border); background: var(--bg); color: #58a6ff; font-size: 1.2rem; margin-bottom: 15px; text-align: center; outline: none; }
-        #main-btn { width: 100%; padding: 45px 10px; font-size: 2rem; font-weight: 900; background: var(--accent); color: white; border: none; border-radius: 20px; cursor: pointer; }
+        body { background: #0b0e14; color: #e6edf3; font-family: sans-serif; text-align: center; padding: 10px; margin: 0; }
+        .wrapper { max-width: 600px; margin: 10px auto; background: #161b22; padding: 20px; border-radius: 25px; border: 2px solid #30363d; }
+        #text-query { width: 90%; padding: 15px; border-radius: 12px; border: 2px solid #30363d; background: #0d1117; color: #58a6ff; font-size: 1.2rem; margin-bottom: 15px; outline: none; }
+        #main-btn { width: 100%; padding: 45px 10px; font-size: 2.2rem; font-weight: 900; background: #238636; color: white; border: none; border-radius: 20px; cursor: pointer; }
         #main-btn.active { background: #da3633; box-shadow: 0 0 30px #da3633; }
-        #status { margin: 15px 0; font-size: 1.1rem; font-weight: bold; color: #3fb950; }
-        #live-text { background: var(--bg); padding: 20px; border-radius: 15px; border: 1px solid var(--border); min-height: 60px; color: #d1d5db; line-height: 1.6; }
+        #status { margin: 10px 0; font-size: 1rem; color: #8b949e; }
+        #live-text { background: #0d1117; padding: 15px; border-radius: 12px; border: 1px solid #30363d; min-height: 50px; color: #d1d5db; }
+        #json-output { width: 100%; height: 100px; background: #000; color: #3fb950; font-family: monospace; font-size: 0.7rem; margin-top: 10px; display: none; }
     </style>
 </head>
 <body>
 
 <div class="wrapper">
-    <h2 style="color:#f0f6fc;">SAHA ŞEFİ V29</h2>
-    <input type="text" id="text-query" placeholder="Soru veya İş ID..." onkeypress="if(event.key==='Enter') searchEngine(this.value)">
+    <h2 style="color:#f0f6fc;">Saha Şefi V19</h2>
+    <input type="text" id="text-query" placeholder="Buraya yazabilirsin şefim..." onkeypress="if(event.key==='Enter') searchEngine(this.value)">
     <button id="main-btn">🎙️ SİSTEMİ AÇ</button>
-    <div id="status">Bağlanıyor...</div>
-    <div id="live-text">Hızlı öğrenme modu aktif. Soru sorunca bilmezse cevabı isteyecek ve anında kaydedecek.</div>
+    <div id="status">Veritabanı kontrol ediliyor...</div>
+    <div id="live-text">Komut bekliyorum.</div>
+    <textarea id="json-output" readonly></textarea>
 </div>
 
 <script>
-    const GITHUB_TOKEN = "BURAYA_TOKEN_YAZILACAK"; 
-    const OWNER = "saitcandemir";
-    const REPO = "ai-pazar3";
-    const PATH_M = "muhabbet.js";
-    const PATH_I = "is_emirleri.json";
+    const URL_M = "https://raw.githubusercontent.com/saitcandemir/ai-pazar3/main/muhabbet.js";
+    const URL_I = "https://raw.githubusercontent.com/saitcandemir/ai-pazar3/refs/heads/main/is_emirleri.json";
 
-    let db_full = [];
+    let database = [];
     let isListening = false;
-    let learnMode = false;
-    let lastQ = "";
-    let mSha = ""; 
+    let learningMode = false;
+    let lastQuery = "";
 
     async function setup() {
         try {
-            const resM = await fetch(`https://api.github.com/repos/${OWNER}/${REPO}/contents/${PATH_M}`, {
-                headers: { "Authorization": `token ${GITHUB_TOKEN}` }
-            });
-            const dataM = await resM.json();
-            mSha = dataM.sha;
-            const rawM = decodeURIComponent(escape(atob(dataM.content)));
-            
-            // Regex ile garantili çekme
-            const contentM = JSON.parse(rawM.match(/\[.*\]/s)[0]);
+            // Dosyaları teker teker dene, biri bozuksa diğeri çalışsın
+            const responses = await Promise.allSettled([
+                fetch(URL_M + "?t=" + Date.now()).then(r => r.text()),
+                fetch(URL_I + "?t=" + Date.now()).then(r => r.json())
+            ]);
 
-            const resI = await fetch(`https://raw.githubusercontent.com/${OWNER}/${REPO}/main/${PATH_I}?t=` + Date.now());
-            const contentI = await resI.json();
+            database = [];
 
-            db_full = [...contentM, ...contentI];
-            document.getElementById('status').innerText = "✅ SİSTEM HAZIR (" + db_full.length + " VERİ)";
-        } catch (e) { 
-            document.getElementById('status').innerText = "❌ VERİ OKUMA HATASI!";
-        }
-    }
-
-    async function quickSave(q, a) {
-        document.getElementById('status').innerText = "💾 HAFIZAYA YAZILIYOR...";
-        // Sadece muhabbet kısmını güncelle
-        const muhabbetPart = db_full.filter(x => x.soru);
-        const updatedM = [{"soru": q, "cevap": a}, ...muhabbetPart];
-        const b64 = btoa(unescape(encodeURIComponent(JSON.stringify(updatedM, null, 2))));
-
-        try {
-            const res = await fetch(`https://api.github.com/repos/${OWNER}/${REPO}/contents/${PATH_M}`, {
-                method: "PUT",
-                headers: { "Authorization": `token ${GITHUB_TOKEN}`, "Content-Type": "application/json" },
-                body: JSON.stringify({ message: "Saha Şefi Hızlı Kayıt", content: b64, sha: mSha })
-            });
-            if (res.ok) {
-                const r = await res.json();
-                mSha = r.content.sha;
-                db_full = [updatedM[0], ...db_full];
-                speak("Öğrendim şefim, hafızaya attım.");
-                document.getElementById('status').innerText = "✅ KAYDEDİLDİ";
-                learnMode = false;
+            // Muhabbet dosyasını işle
+            if (responses[0].status === "fulfilled") {
+                try {
+                    const cleanM = responses[0].value.match(/\[.*\]/s);
+                    if (cleanM) database = [...database, ...JSON.parse(cleanM[0])];
+                } catch(e) { console.log("Muhabbet dosyası boş veya hatalı."); }
             }
-        } catch (e) { speak("Yazarken hata oluştu."); }
+
+            // İş emri dosyasını işle
+            if (responses[1].status === "fulfilled") {
+                database = [...database, ...responses[1].value];
+            }
+
+            document.getElementById('status').innerText = "Sistem Hazır! (" + database.length + " kayıt)";
+        } catch (e) {
+            document.getElementById('status').innerText = "Bağlantı sağlandı, veri bekleniyor.";
+        }
     }
 
     function searchEngine(input) {
         const query = input.toLowerCase().trim();
         if (!query) return;
 
-        if (learnMode) {
-            quickSave(lastQ, input);
+        if (learningMode) {
+            database.unshift({"soru": lastQuery, "cevap": input});
+            learningMode = false;
+            document.getElementById('json-output').style.display = "block";
+            document.getElementById('json-output').value = JSON.stringify(database.filter(x=>x.soru), null, 2);
+            speak("Öğrendim şefim!");
             return;
         }
 
-        const found = db_full.find(item => 
-            Object.values(item).some(v => v && v.toString().toLowerCase().includes(query))
-        );
+        // AKILLI ARAMA: Her sütuna bak
+        const found = database.find(item => {
+            return Object.values(item).some(v => v.toString().toLowerCase().includes(query));
+        });
 
         if (found) {
-            let res = found.cevap || `${found["İş ID"]} nolu iş: ${found["İş Açıklaması"]}.`;
+            let res = found.cevap || `${found["İş ID"]} nolu iş: ${found["İş Açıklaması"]}. Kaynak: ${found["Kaynakçı Süresi (Dakika)"]} dk.`;
             speak(res);
             document.getElementById('live-text').innerText = res;
         } else {
-            learnMode = true;
-            lastQ = query;
-            speak(query + " nedir şefim? Cevabını söyle hemen kaydedeyim.");
+            learningMode = true;
+            lastQuery = query;
+            speak(query + " nedir? Cevabı yaz şefim.");
         }
     }
 
+    // SES SİSTEMİ
     const Speech = window.SpeechRecognition || window.webkitSpeechRecognition;
-    const rec = new Speech(); rec.lang = 'tr-TR'; rec.continuous = true;
+    const rec = new Speech();
+    rec.lang = 'tr-TR';
+    rec.continuous = true;
 
     function speak(t) {
         rec.stop();
@@ -120,8 +108,15 @@
     }
 
     document.getElementById('main-btn').onclick = () => {
-        if(!isListening) { rec.start(); isListening = true; document.getElementById('main-btn').classList.add('active'); }
-        else { rec.stop(); isListening = false; document.getElementById('main-btn').classList.remove('active'); }
+        if(!isListening) {
+            rec.start(); isListening = true;
+            document.getElementById('main-btn').innerText = "DURDUR";
+            document.getElementById('main-btn').classList.add('active');
+        } else {
+            rec.stop(); isListening = false;
+            document.getElementById('main-btn').innerText = "SİSTEMİ AÇ";
+            document.getElementById('main-btn').classList.remove('active');
+        }
     };
 
     rec.onresult = (e) => searchEngine(e.results[e.results.length-1][0].transcript);
